# FFmpegCmdSdk

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/yyl/demo/: FFmpegApi.java  MainActivity.java  Test.java  VideoBeanJson.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ffmpeg_cmd/: build.gradle
ffmpeg_cmd/ffmpeg4.1.0/build_script/ffmpeg/: build_android_all.sh
ffmpeg_cmd/ffmpeg4.1.0/build_script/x264/: build_android_all.sh
ffmpeg_cmd/src/main/: AndroidManifest.xml
ffmpeg_cmd/src/main/java/com/yyl/ffmpeg/: CpuArchHelper.java  CpuUtils.java  FFmpeg.java  FFmpegCallBack.java  FFmpegCallBack2.java  FFmpegUtils.java
ffmpeg_cmd/src/main/res/values/: strings.xml
ffmpeglib/: CMakeLists.txt  build.gradle  proguard-rules.pro
ffmpeglib/ffmpeg4.1.3/: build_android.sh  tip.md
ffmpeglib/ffmpeg4.1.3/build_script/ffmpeg/: arm64.sh  build_android_armeabi_v7a.sh
ffmpeglib/ffmpeg4.1.3/build_script/x264/: build_android_arm.sh
ffmpeglib/ffmpeg4.1.3/x264/: tip.md
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: ffmpeg_jni.c  ffmpeg_jni.h  ffprobe_jni.c  ffprobe_jni.h  yyl_config.c  yyl_config.h  yyl_log.c  yyl_log.h
ffmpeglib/src/main/cpp/ffmpeg4_1_3/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffprobe.c  ffprobe.h
ffmpeglib/src/main/java/com/yyl/ffmpeg/: CpuUtils.java  FFmpegCallBack2.java  FFmpegUtils.java
ffmpeglib/src/main/res/values/: arrays.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
